esercizio svolto credo

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1 class="title">Classroom Manager</h1>
-    <button class="bottoni" onclick="colorMainTitle()"></button>
+    <!-- <button class="bottoni" onclick="colorMainTitle()"></button> -->
     <div class="list-container">
         <ul id="student-list">
         </ul>
